php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25504 not reporting wrong parameter count
Submitted: 2003-09-11 20:28 UTC Modified: 2003-09-11 21:31 UTC
From: thierry dot graff at laposte dot net Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 4.3.3 OS: windows XP pro
Private report: No CVE-ID: None
 [2003-09-11 20:28 UTC] thierry dot graff at laposte dot net
Description:
------------
The following call :
$matches = preg_match_all($pattern, $str);
will not lead to an error message saying that one parameter is missing, but the interpreter crashes, and the following message is displayed :
"CGI Error
The specified CGI application misbehaved by not returning a complete set of HTTP headers. The headers it did return are:"
(no header specified in the message)

The correct call :
preg_match_all($pattern, $str, $matches);
works properly.



Reproduce code:
---------------
$matches = preg_match_all($pattern, $str);

Expected result:
----------------
Warning: Wrong parameter count for preg_match_all()

Actual result:
--------------
CGI Error
The specified CGI application misbehaved by not returning a complete set of HTTP headers. The headers it did return are:

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-09-11 21:31 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 03:00:01 2026 UTC