- Fixed bug #25504 (pcre_match_all() crashes when passed only 2 parameters)